...
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:paddingTop="2dp"
            android:paddingBottom="2dp">
            <EditText
                android:id="@+id/edt_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:digits="0123456789."
                android:maxLength="10"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="5dp"
        android:paddingLeft="5dp">
        <TableRow>
            <Button
                android:id="@+id/btn_category1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_category_income"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
...
