<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <com.kakeibo.ui.model.NonScrollExpandableListView
            android:id="@+id/lsv_expandable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</androidx.core.widget.NestedScrollView>